Version 0.24.1
--------------

- Added a link to the sourceforge project page in the About dialog (request #3531298).
- Now Java 1.5 is needed for compiling FidoCadJ.
- The standard libraries now are stdlib, ihram, elettrotecnica and pcb. Their elements will not be converted in primitives when the "split non standard symbols" option is active, UNLESS the "Strict compatibility with FidoCAD" mode is selected. 
- The "Strict compatibility with FidoCAD" mode is more reliable and the options about the "FidoCadJ extensions" have been eliminated.
- More precise selection of very close elements without "name" and "value" tags.
- Popup menu accessible with right click in the selection mode (cut, copy, paste, rotate, mirror request #3409656). Unuseful menu items are disabled if nothing is selected.
- Open a file is now faster and requires less memory.
- Added a Dutch translation of the user interface.
- Added the -l option to the command line interface.
- It is now easier to come back from an editing mode, to a macro that was previously selected.
- Selected objects appear in green, with different shades depending on their original color.
- More precise rendering of the spline curves.
- User can add and remove points to splines and polygons.
- The FidoCadJ project updated to the new version of the SourceForge software.
- Diagonal shift of the selected element done during copy/paste is now done during paste and not during copy. The shift can be disabled by turning off an option.

Version 0.24
------------

- Added the support for italic text lines
- The lenght of the segment being entered is expressed also in millimeters.
- Slight adjustment of the arrow style when they are associated to lines.
- Added the new "curve" primitive (cubic spline).
- Spanish translation of the user interface (thanks to Gohan "sbcne").
- Bug #3484904 corrected.
- Layer names are saved, if nonstandard.
- The grid pitch is saved (bug #3468917).
- More accurate automatic test scripts.