@@ -1,7 +1,7 @@
 Version 0.24.1
 --------------
 
-- Added a link to the sourceforge project page in the About dialog (request #3531298).
+- Added a link to the Sourceforge project page in the About dialog (request #3531298).
 - Now Java 1.5 is needed for compiling FidoCadJ.
 - The standard libraries now are stdlib, ihram, elettrotecnica and pcb. Their elements will not be converted in primitives when the "split non standard symbols" option is active, UNLESS the "Strict compatibility with FidoCAD" mode is selected. 
 - The "Strict compatibility with FidoCAD" mode is more reliable and the options about the "FidoCadJ extensions" have been eliminated.
@@ -16,12 +16,14 @@ Version 0.24.1
 - User can add and remove points to splines and polygons.
 - The FidoCadJ project updated to the new version of the SourceForge software.
 - Diagonal shift of the selected element done during copy/paste is now done during paste and not during copy. The shift can be disabled by turning off an option.
+- Check and eventually auto complete the extension when loading FidoCadJ files.
+- Some information about graphical file export are now saved.
 
 Version 0.24
 ------------
 
 - Added the support for italic text lines
-- The lenght of the segment being entered is expressed also in millimeters.
+- The length of the segment being entered is expressed also in millimeters.
 - Slight adjustment of the arrow style when they are associated to lines.
 - Added the new "curve" primitive (cubic spline).
 - Spanish translation of the user interface (thanks to Gohan "sbcne").
